<resources>
    <string name="AppName">GoToMeeting</string>
    <string name="welcome_to">welcome to</string>
    <string name="video_meeting_conference_app">Video Meeting | Conference App</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">email</string>
    <string name="you_example_com">you_example_com</string>
    <string name="password">Password</string>
    <string name="email_id">Email-Id</string>
    <string name="Password">\\u200\\u200\\u200u200</string>
    <string name="password_hint">\\u200\\u200u200</string>
    <string name="sign_in">sign in</string>
    <string name="welcome">Welcome_to</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="No_account">don\'t have an account</string>
    <string name="Sign_Up">sign up</string>
    <string name="sign_in_your_account">Sign in to your account</string>
    <string name="App_name">Go To Meet</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_few_details_to_get_your_account_ready">We need few details to get your account ready</string>
    <string name="first_name">First_Name</string>
    <string name="john">john</string>
    <string name="last_name">Last_Name</string>
    <string name="doe">Doe</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="No_account_user_have">Don\'t have an account?</string>
    <string name="sign_out">Sign out</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="powered_by">Powered by</string>
    <string name="go_to_meet">Go To Meet</string>
    <string name="get_started">Get Started</string>
    <string name="onboarding_title1">Instant Setup</string>
    <string name="onboarding_desc1">Set up or join a video/audio meeting or conference instantly</string>
    <string name="onboarding_title2">Everywhere Together</string>
    <string name="onboarding_title3">Instant Messaging</string>
    <string name="onboarding_title4">Schedule Meetings</string>
    <string name="onboarding_desc2">Enjoy high quality audio &amp; video anywhere and stay in touch.</string>
    <string name="onboarding_desc3">Stay connected with instant messaging in between the meeting.</string>
    <string name="onboarding_desc4">Schedule your meetings and conferences with ease.</string>

</resources>